--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
+  "name": "scenelist",
+  "version": "1.0.0",
+  "description": "Scenelist project using Nuxt.js",
+  "author": "Your Name",
   "private": true,
-  "type": "module",
   "scripts": {
+    "dev": "nuxt",
     "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "start": "nuxt start",
+    "generate": "nuxt generate"
   },
-  "devDependencies": {
-    "@nuxt/devtools": "^1.0.3",
-    "nuxt": "^3.8.2",
-    "vue": "^3.3.8",
-    "vue-router": "^4.2.5"
-  }
+  "dependencies": {
+    "nuxt": "^2.15.8"
+  },
+  "devDependencies": {}
 }
